--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send Msg"
+                android:id="@+id/button_sendMessage"
+                android:layout_above="@+id/button_device_status"
+                android:layout_centerHorizontal="true" />
+
         </RelativeLayout>
     </FrameLayout>
 </FrameLayout>
