--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,26 @@
                 android:layout_above="@+id/button_device_status"
                 android:layout_centerHorizontal="true" />
 
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add GeoFence"
+                android:id="@+id/add_geofences_button"
+                android:layout_above="@+id/button_sendMessage"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remove Geofence"
+                android:id="@+id/remove_geofences_button"
+                android:layout_above="@+id/button_sendMessage"
+                android:layout_alignLeft="@+id/button_sendMessage"
+                android:layout_alignStart="@+id/button_sendMessage" />
+
         </RelativeLayout>
     </FrameLayout>
 </FrameLayout>
