--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
                 android:layout_gravity="bottom|center_horizontal"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="25dp"
                 android:text="@string/TestNotificationButton"/>
 
 
