--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,131 +1,138 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/backgroundImage1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:adjustViewBounds="true"
-    android:scaleType="centerCrop"
-    android:id="@+id/backgroundImage1"
-    android:src="@drawable/main_activity_background"
     android:layout_alignBottom="@+id/textView"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
+    android:adjustViewBounds="true"
+    android:scaleType="centerCrop"
+    android:src="@drawable/main_activity_background"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/fullscreen_content"
+
+    <ImageView
+        android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:keepScreenOn="true">
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/main_activity_background" />
 
-        <ImageView
-            android:id="@+id/backgroundImage"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:transitionGroup="false"
+        tools:context=".MainActivity">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:text="@string/AppName"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#f7161655"
+            android:textSize="24dp"
+            android:textStyle="bold"
+        />
+
+        <Switch
+            android:id="@+id/sleepToogle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+
+            android:checked="false"
+            android:text="@string/SleepToogleOn"
+            android:textOff="No"
+            android:textOn="Yes"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="75dp"/>
+
+
+
+        <Button
+            android:id="@+id/testNotificationButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/main_activity_background"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:transitionGroup="false"
-            tools:context=".MainActivity">
-
-            <Switch
-                android:id="@+id/sleepToogle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:checked="false"
-                android:text="@string/SleepToogleOn"
-                android:textOff="No"
-                android:textOn="Yes" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
-                android:text="@string/AppName"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <Button
-                android:id="@+id/testNotificationButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="25dp"
-                android:text="@string/TestNotificationButton"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="25dp"
+            android:text="@string/TestNotificationButton" />
 
 
+        <Button
+            android:id="@+id/button_device_status"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/testNotificationButton"
+            android:layout_toLeftOf="@+id/textView"
+            android:layout_toStartOf="@+id/textView"
+            android:layout_marginBottom="25dp"
+            android:text="Dev_Id" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dev_Id"
-        android:id="@+id/button_device_status"
-        android:layout_above="@+id/testNotificationButton"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView" />
+        <Button
+            android:id="@+id/button_steep_status"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/testNotificationButton"
+            android:layout_alignEnd="@+id/textView"
+            android:layout_alignRight="@+id/textView"
+            android:layout_marginBottom="25dp"
+            android:text="Sleep Status" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sleep Status"
-        android:id="@+id/button_steep_status"
-        android:layout_above="@+id/testNotificationButton"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        <Button
+            android:id="@+id/button_save_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/testNotificationButton"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="25dp"
+            android:text="Save Data" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save Data"
-        android:id="@+id/button_save_data"
-        android:layout_above="@+id/testNotificationButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <Button
+            android:id="@+id/button_sendMessage"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_device_status"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="25dp"
+            android:text="Send Msg" />
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Send Msg"
-                android:id="@+id/button_sendMessage"
-                android:layout_above="@+id/button_device_status"
-                android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/add_geofences_button"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_sendMessage"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="25dp"
+            android:text="Add GeoFence" />
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add GeoFence"
-                android:id="@+id/add_geofences_button"
-                android:layout_above="@+id/button_sendMessage"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+        <Button
+            android:id="@+id/remove_geofences_button"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_sendMessage"
+            android:layout_alignLeft="@+id/button_sendMessage"
+            android:layout_alignStart="@+id/button_sendMessage"
+            android:layout_marginBottom="25dp"
+            android:text="Remove Geofence" />
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Remove Geofence"
-                android:id="@+id/remove_geofences_button"
-                android:layout_above="@+id/button_sendMessage"
-                android:layout_alignLeft="@+id/button_sendMessage"
-                android:layout_alignStart="@+id/button_sendMessage" />
-
-        </RelativeLayout>
-    </FrameLayout>
+    </RelativeLayout>
 </FrameLayout>
