--- a/app/src/main/res/layout/floating_notification.xml
+++ b/app/src/main/res/layout/floating_notification.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:gravity="center_vertical"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <com.example.vibhuyadav.sleepguard.CircularImageView
         android:id="@+id/profile_picture"
@@ -19,10 +19,10 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_weight="1"
-        android:text="@string/message_disturb"
+        android:background="@drawable/notification_background"
         android:padding="5dp"
-        android:textColor="@color/black"
-        android:background="@drawable/notification_background">
+        android:text="@string/message_disturb"
+        android:textColor="@color/black">
 
         <requestFocus />
     </EditText>
@@ -31,8 +31,8 @@
         android:id="@+id/delete_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="10dp"
         android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="10dp"
         android:background="@drawable/ic_icon_delete" />
 
 </LinearLayout>
